--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "jest-dom": "^3.1.2",
-    "react-testing-library": "^6.1.2"
+    "@testing-library/jest-dom": "^4.2.3",
+    "@testing-library/react": "^9.3.2"
   }
 }
